# minimalist-grammar-parser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-actions.yml
benches/: mg_benches.rs
src/: grammars.rs  handlers.rs  lexicon.rs  lib.rs  neural.rs  neural_lexicon.rs  parsing.rs  tests.rs  tree_building.rs
src/lexicon/: mdl.rs  mutations.rs  semantics.rs
src/lexicon/mutations/: semantics.rs
src/neural/: loss.rs  neural_beam.rs  neural_lexicon.rs  parameterization.rs  pathfinder.rs  utils.rs
src/parsing/: beam.rs  rules.rs  tests.rs  trees.rs
src/parsing/beam/: neural_beam.rs
src/parsing/rules/: novel_printing.rs  printing.rs  semantics.rs  serialization.rs
