[package]
name = "minimalist-grammar-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.11", features = [
  "compile-time-rng",
  "std",
], default-features = false }
bitvec = "1.0.1"
chumsky = "0.10.0"
itertools = "0.14.0"
logprob = "0.2.1"
min-max-heap = "1.3.0"
petgraph = "0.8.1"
thin-vec = "0.2.14"
tinyvec = { version = "1.9.0", features = ["alloc"] }
simple-semantics = { git = "ssh://git@github.com/MichaelGoodale/simple-semantics.git", optional = true }
regex = { version = "1.11.1", optional = true }
rand = { version = "0.9.1", optional = true }
rand_distr = { version = "0.5.1", optional = true }
thiserror = "2.0.12"
serde_json = "1.0.140"
serde = "1.0.219"


[dev-dependencies]
anyhow = "1.0.97"
approx = "0.5.1"
divan = "0.1.8"
lazy_static = "1.4.0"
rand_chacha = "0.9.0"

[features]
default = ["sampling"]
sampling = ["dep:rand", "dep:rand_distr"]
semantics = ["dep:simple-semantics", "dep:regex"]
pretty = []

[[bench]]
name = "mg_benches"
harness = false

[[bin]]
name = "mg_benches"
bench = false
test = false

[profile.profiling]
inherits = "release"
debug = true
