[package]
name = "minimalist-grammar-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", features = [
  "compile-time-rng",
  "std",
], default-features = false }
bitvec = "1.0.1"
chumsky = "0.12.0"
itertools = "0.14.0"
logprob = "0.3.0"
min-max-heap = "1.3.0"
petgraph = "0.8.3"
thin-vec = "0.2.14"
tinyvec = { version = "1.11.0", features = ["alloc"] }
simple-semantics = { git = "https://github.com/MichaelGoodale/simple-semantics.git", optional = true, default-features = false }
regex = { version = "1.11.3", optional = true }
rand = { version = "0.10.0", optional = true }
rand_distr = { version = "0.6.0", optional = true }
thiserror = "2.0.18"
serde_json = "1.0.149"
serde = "1.0.228"


[dev-dependencies]
anyhow = "1.0.102"
approx = "0.5.1"
divan = "0.1.21"
lazy_static = "1.5.0"
rand_chacha = "0.10.0"

[features]
default = ["sampling", "pretty", "semantics"]
sampling = ["dep:rand", "dep:rand_distr"]
semantics = ["dep:simple-semantics", "dep:regex"]
pretty = []

[[bench]]
name = "mg_benches"
harness = false

[profile.bench]
debug = true


[profile.profiling]
inherits = "release"
debug = true
